--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -2,6 +2,7 @@ apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
   name: tanzu-java-web-app135
+  namespace: tap-tim
   labels:
     apps.tanzu.vmware.com/workload-type: server
     app.kubernetes.io/part-of: tanzu-java-web-app135
